// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toAddReaction function should fail due to invalid emoji (null) 1`] = `
Object {
  "message": "    
    expected: emojis parameter to be an array with string or objects
    received: null
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should fail due to invalid emoji (object) 1`] = `
Object {
  "message": "    
    expected: emojis parameter to be an array with string or objects
    received: object
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should fail due to invalid emoji (undefined) 1`] = `
Object {
  "message": "    
    expected: emojis parameter to be an array with string or objects
    received: undefined
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should fail due to invalid messageData (number) 1`] = `
Object {
  "message": "    
    expect: message data to be null, undefined, string or an object with id or text properties
    received: number
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should return a failed test with isNot = false 1`] = `
Object {
  "message": "    
    expected: to add reactions 😀
    received: no reaction was added to message
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should return a failed test with isNot = false and timeout 1`] = `
Object {
  "message": "    
    expected: to add reactions 😀
    received: 😀
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should return a failed test with isNot = true 1`] = `
Object {
  "message": "    
    expected: not to add reactions 😀
    received: 😀
",
  "pass": false,
}
`;

exports[`testing toAddReaction function should return a passed test with isNot = false 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toAddReaction function should return a passed test with isNot = false 2`] = `
Object {
  "pass": true,
}
`;

exports[`testing toAddReaction function should return a passed test with isNot = true 1`] = `
Object {
  "pass": true,
}
`;
